--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
         <!-- Sections -->
 
         <!-- Sections -->
-        <section id="Contact1 class="contact" style="
+        <section id="Contact1" class="contact" style="
         
             color: #ffffff;
             background-color: #3b404c;"
