--- a/index.html
+++ b/index.html
@@ -268,14 +268,14 @@
                                     <div class="col-md-6 col-sm-12 col-xs-12">
                                         <div class="form-group">
                                             <label for="exampleInputEmail1">Name</label>
-                                            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="" required>
+                                            <input type="text" name="CustomerName" class="form-control" id="exampleInputEmail1" placeholder="" required>
                                         </div>
                                     </div>
 
                                     <div class="col-md-6 col-sm-12 col-xs-12">
                                         <div class="form-group">
                                             <label for="exampleInputEmail1">Subject</label>
-                                            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="" required>
+                                            <input type="text" name="CustomerSubject" class="form-control" id="exampleInputEmail1" placeholder="" required>
                                         </div>
                                     </div>
                                 </div>
