--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                                     <div class="col-md-12 col-sm-12 col-xs-12">
                                         <div class="form-group">
                                             <label for="exampleInputPassword1">Your Message</label>
-                                            <textarea rows="7" class="form-control" id="exampleInputPassword1" placeholder=""></textarea>
+                                            <textarea rows="7" name="CustomerMessage" class="form-control" id="exampleInputPassword1" placeholder=""></textarea>
                                         </div>
                                     </div>
                                 </div>
