--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@
 
                                     <div class="col-md-6 col-sm-12 col-xs-12">
                                         <div class="form-group">
-                                            <label for="exampleInputEmail1">Subject</label>
-                                            <input type="text" name="CustomerSubject" class="form-control" id="exampleInputEmail1" placeholder="" required>
+                                            <label for="exampleInputEmail1">Email</label>
+                                            <input type="text" name="CustomerEmail" class="form-control" id="exampleInputEmail1" placeholder="" required>
                                         </div>
                                     </div>
                                 </div>
